# simple_transfer

./: .gitignore  CMakeLists.txt  LICENSE  Platform.cpp  Platform.h  SimpleTransferClient.cpp  SimpleTransferClient.h  SimpleTransferConnection.cpp  SimpleTransferConnection.h  SimpleTransferServer.cpp  SimpleTransferServer.h  SimpleTransferTest.cpp
